--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,26 @@ numpy>=1.21.0
 pandas>=1.3.0
 scipy>=1.7.0
 
+# Image processing
+Pillow>=9.0.0
+imageio>=2.9.0
+
 # Visualization
 matplotlib>=3.4.0
 seaborn>=0.11.0
 
 # Machine Learning
 scikit-learn>=1.0.0
+
+# Deep Learning
+torch>=1.7.1
+torchvision>=0.8.2
+
+# GradCAM for visualization
+grad-cam>=1.5.0
+
+# Utilities
+tqdm>=4.60.0
 
 # Jupyter
 jupyter>=1.0.0
